--- a/erpnext/translations/zh.csv
+++ b/erpnext/translations/zh.csv
@@ -3444,7 +3444,7 @@ Group By Customer,按客户分组,
 Group By Supplier,按供应商分组,
 Group Node,组节点,
 Group Warehouses cannot be used in transactions. Please change the value of {0},不能在事务中使用组仓库。请更改值{0},
-Help,帮助,
+Help,陕建数科帮助,
 Help Article,帮助文章,
 "Helps you keep tracks of Contracts based on Supplier, Customer and Employee",帮助您根据供应商，客户和员工记录合同,
 Helps you manage appointments with your leads,帮助您管理潜在客户的约会,
@@ -6447,7 +6447,7 @@ Evening,晚间,
 Anytime,任何时候,
 Volunteer Skills,志愿者技能,
 Volunteer Skill,志愿者技能,
-Homepage,主页,
+Homepage,陕建数科主页,
 Hero Section Based On,基于英雄的英雄部分,
 Homepage Section,主页部分,
 Hero Section,英雄科,
